@@ -204,6 +204,16 @@ typedef struct
 }
 zbx_config_hk_t;
 
+typedef struct
+{
+	zbx_uint64_t	hostid;
+	int		errors_from;
+	int		disable_until;
+	unsigned char	type;
+	unsigned char	available;
+}
+zbx_host_availability_t;
+
 void	dc_add_history(zbx_uint64_t itemid, unsigned char value_type, unsigned char flags, AGENT_RESULT *value,
 		zbx_timespec_t *ts, unsigned char state, const char *error, int timestamp, const char *source,
 		int severity, int logeventid, zbx_uint64_t lastlogsize, int mtime);
@@ -297,7 +307,6 @@ void	DCrequeue_proxy(zbx_uint64_t hostid, unsigned char update_nextcheck);
 
 void	DCget_user_macro(zbx_uint64_t *hostids, int host_num, const char *macro, char **replace_to);
 
-int	DCconfig_update_host_availability(zbx_uint64_t hostid, unsigned char item_type, unsigned char available,
-		int errors_from, int disable_until);
+int	DCconfig_update_host_availability(const zbx_host_availability_t *availability, int availability_num);
 
 #endif
