@@ -4142,51 +4142,65 @@ void	DCrequeue_items(zbx_uint64_t *itemids, unsigned char *states, int *lastcloc
 	UNLOCK_CACHE;
 }
 
-int	DCconfig_update_host_availability(zbx_uint64_t hostid, unsigned char item_type, unsigned char available,
-		int errors_from, int disable_until)
+/******************************************************************************
+ *                                                                            *
+ * Function: DCconfig_update_host_availability                                *
+ *                                                                            *
+ * Purpose: update hosts availability in configuration cache                  *
+ *                                                                            *
+ * Parameters: availability     - [IN] an array containing host availability  *
+ *                                data                                        *
+ *             availability_num - [IN] the number of items in availability    *
+ *                                array                                       *
+ *                                                                            *
+ * Return value: The number of updates performed.                             *
+ *                                                                            *
+ ******************************************************************************/
+int	DCconfig_update_host_availability(const zbx_host_availability_t *availability, int availability_num)
 {
-	int		res = FAIL;
+	int		update_count = 0, i;
 	ZBX_DC_HOST	*dc_host;
 
 	LOCK_CACHE;
 
-	if (NULL == (dc_host = zbx_hashset_search(&config->hosts, &hostid)))
-		goto unlock;
-
-	switch (item_type)
+	for (i = 0; i < availability_num; i++)
 	{
-		case ITEM_TYPE_ZABBIX:
-			dc_host->errors_from = errors_from;
-			dc_host->available = available;
-			dc_host->disable_until = disable_until;
-			break;
-		case ITEM_TYPE_SNMPv1:
-		case ITEM_TYPE_SNMPv2c:
-		case ITEM_TYPE_SNMPv3:
-			dc_host->snmp_errors_from = errors_from;
-			dc_host->snmp_available = available;
-			dc_host->snmp_disable_until = disable_until;
-			break;
-		case ITEM_TYPE_IPMI:
-			dc_host->ipmi_errors_from = errors_from;
-			dc_host->ipmi_available = available;
-			dc_host->ipmi_disable_until = disable_until;
-			break;
-		case ITEM_TYPE_JMX:
-			dc_host->jmx_errors_from = errors_from;
-			dc_host->jmx_available = available;
-			dc_host->jmx_disable_until = disable_until;
-			break;
-		default:
-			goto unlock;
+		if (NULL == (dc_host = zbx_hashset_search(&config->hosts, &availability->hostid)))
+			continue;
+
+		switch (availability->type)
+		{
+			case ITEM_TYPE_ZABBIX:
+				dc_host->errors_from = availability->errors_from;
+				dc_host->available = availability->available;
+				dc_host->disable_until = availability->disable_until;
+				break;
+			case ITEM_TYPE_SNMPv1:
+			case ITEM_TYPE_SNMPv2c:
+			case ITEM_TYPE_SNMPv3:
+				dc_host->snmp_errors_from = availability->errors_from;
+				dc_host->snmp_available = availability->available;
+				dc_host->snmp_disable_until = availability->disable_until;
+				break;
+			case ITEM_TYPE_IPMI:
+				dc_host->ipmi_errors_from = availability->errors_from;
+				dc_host->ipmi_available = availability->available;
+				dc_host->ipmi_disable_until = availability->disable_until;
+				break;
+			case ITEM_TYPE_JMX:
+				dc_host->jmx_errors_from = availability->errors_from;
+				dc_host->jmx_available = availability->available;
+				dc_host->jmx_disable_until = availability->disable_until;
+				break;
+			default:
+				continue;
+		}
+		update_count++;
 	}
 
-	res = SUCCEED;
-
-unlock:
 	UNLOCK_CACHE;
 
-	return res;
+	return update_count;
 }
 
 /******************************************************************************
